# hermes-trading

./: .env  .gitignore  Dockerfile  pyproject.toml  railway.toml
hermes_trading/: backtest.py  black_swan.py  dashboard.py  downtime.py  indicators.py  loop.py  news.py  notify.py  reflect.py  run.py  scanner.py  score.py  self_improve.py  session_windows.py  volatility.py
hermes_trading/adapters/: candles.py  exchange.py  macro.py  news.py  onchain.py  price.py
state/: goal.yaml  hypotheses.jsonl  strategy.yaml  trades.jsonl
state/history/: v01.yaml  v02.yaml  v03.yaml  v04.yaml  v05.yaml  v06.yaml  v08.yaml
state_defaults/: goal.yaml  strategy.yaml
