[project]
name = "hermes-trading"
version = "0.1.0"
description = "Self-improving trading agent worker"
requires-python = ">=3.11"
dependencies = [
    "ccxt>=4.2.0",
    "yfinance>=0.2.0",
    "pyyaml>=6.0",
    "httpx>=0.27.0",
    "aiofiles>=23.0.0",
    "numpy>=1.26.0",
    "pandas>=2.0.0",
    "rich>=13.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["hermes_trading"]
